--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -840,7 +840,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex align-items-start">
                                         <div class="feature-icon-div">
-                                            <img src="https://mergeasy123.netlify.app/sidebar/email.jog" alt="chatgpt"
+                                            <img src="https://mergeasy123.netlify.app/sidebar/email.jpg" alt="chatgpt"
                                                 class="feature-icon">
 
                                         </div>
@@ -862,24 +862,24 @@
 
                         </div>
 
-                        <div class="card-bg mb-2 shadow-sm" onclick="showAiPage()">
+                        <div class="card-bg mb-2 shadow-sm" onclick="showWorkEmailPage()">
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-start">
                                     <div class="feature-icon-div">
-                                        <img src="https://mergeasy123.netlify.app/sidebar/chatgpt-icon.png"
+                                        <img src="https://mergeasy123.netlify.app/sidebar/work-email.jpg"
                                             alt="chatgpt" class="feature-icon">
                                     </div>
                                     <div>
                                         <div class="d-flex align-items-start">
-                                            <h3 class="heading-secondry ">ChatGPT custom os is sit dolor
-                                                prompt
+                                            <h3 class="heading-secondry ">Find Work Email
+
                                             </h3>
                                             <div class="credit-number ">
                                                 <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
                                                     alt="">&nbsp;<span>3</span>
                                             </div>
                                         </div>
-                                        <p class="text mb-0 pb-0">Lorem ipsum is dolor sit amet co nsectetur.</p>
+                                        <p class="text mb-0 pb-0">Access over 5 data providers (including Findymail, Prospeo, Leadmagic, and more) to find work emails using a waterfall enrichment process</p>
                                     </div>
                                 </div>
                             </a>
@@ -1796,7 +1796,7 @@
         </div>
 
         <!--Smartlead Screen -->
-        <div id="email-screen" class="details">
+        <div id="smartlead-screen" class="details">
             <button onclick="goBack()" class="go-back">Go Back</button>
             <div id="details-content">
                 <div class=" mb-2 ">
@@ -1990,8 +1990,8 @@
             </div>
         </div>
 
-        <!--Scrapper Screen -->
-        <div id="scrapper-screen" class="details">
+        <!--validate email Screen -->
+        <div id="email-screen" class="details">
             <button onclick="goBack()" class="go-back">Go Back</button>
             <div id="details-content">
                 <div class=" mb-2 ">
@@ -1999,7 +1999,7 @@
                         <div class="d-flex align-items-center">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/google.png" alt="chatgpt"
+                                    <img src="https://mergeasy123.netlify.app/sidebar/email.jpg" alt="chatgpt"
                                         class="feature-icon2">
                                 </div>
                                 <div class="">
@@ -2025,16 +2025,17 @@
 
 
                 <h2 class="heading-primary mt-3">
-                    Scrapper (Cell Range)
+                    Email
                 </h2>
                 <div class="search-input ">
-                    <input type="text" name="" id="" class="w-100 searchbar" placeholder="A1:A3">
+                    <input type="email" name="" id="" class="w-100 searchbar" placeholder="">
+                    <p class="text mb-0 ">Press # to select a variable cell</p>
                 </div>
                 <h2 class="heading-primary mt-3">
-                    Output (Cell Range)
+                    Output 
                 </h2>
                 <div class="search-input  output-div">
-                    <input type="text" name="" id="" class="w-100 searchbar" placeholder="B1:B3">
+                    <input type="text" name="" id="" class="w-100 searchbar" placeholder="">
                     <!-- <p class="text mb-0 ">Press # to select a variable cell</p> -->
                 </div>
 
@@ -2044,8 +2045,93 @@
                 <!-- <div class="">
                         <button id="ScrapBtn" class="w-100 mt-2 megic-btn">Search ✨</button>
                     </div> -->
-                <button class="megic-btn mt-3" id="ScrapBtn">
-                    <span>Scrap ✨</span>
+                <button class="megic-btn mt-3" id="VerifyBtn">
+                    <span>Verify ✨</span>
+                    <div class="progress-bar"></div>
+                </button>
+
+                <div class="d-flex justify-content-between mt-3">
+                    <div class="d-flex align-items-center">
+                        <div class="upgrade-icon">
+                            <img src="https://mergeasy123.netlify.app/sidebar/credit.png" alt="">&nbsp;&nbsp;
+                        </div>
+                        <div class="upgrade-text ">
+                            100/100 Credits left
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center ">
+                        <div class="upgrade-text ">
+                            <a href="" class="">Free Credits</a>
+                        </div>
+                        <div class="upgrade-icon2">
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt="">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="">
+                    <button class="w-100  upgrade-btn">UPGRADE</button>
+                </div>
+            </div>
+        </div>
+
+        <!--work email Screen -->
+        <div id="work-email-screen" class="details">
+            <button onclick="goBack()" class="go-back">Go Back</button>
+            <div id="details-content">
+                <div class=" mb-2 ">
+                    <a class="text-decoration-none">
+                        <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-start">
+                                <div class="feature-icon-div">
+                                    <img src="https://mergeasy123.netlify.app/sidebar/work-email.jpg" alt="chatgpt"
+                                        class="feature-icon2">
+                                </div>
+                                <div class="">
+                                    <div class="d-flex align-items-start justify-content-between">
+                                        <h3 class="heading-secondry">Find Work Email
+                                        </h3>
+                                        <div class="credit-number ">
+                                            <img src="https://mergeasy123.netlify.app/sidebar/credit.png"
+                                                alt="">&nbsp;<span>3</span>
+                                        </div>
+                                    </div>
+                                    <p class="text mb-0 pb-0">Access over 5 data providers (including Findymail, Prospeo, Leadmagic, and more) to find work emails using a waterfall enrichment process</p>
+                                    <a href="" class="tutorial"><i class="bi bi-play-circle"></i>&nbsp;Watch Full
+                                        Tutorial</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </a>
+
+                </div>
+                <hr>
+
+
+                <h2 class="heading-primary mt-3">
+                    Email
+                </h2>
+                <div class="search-input ">
+                    <input type="email" name="" id="" class="w-100 searchbar" placeholder="">
+                    <p class="text mb-0 ">Press # to select a variable cell</p>
+                </div>
+                <h2 class="heading-primary mt-3">
+                    Output 
+                </h2>
+                <div class="search-input  output-div">
+                    <input type="text" name="" id="" class="w-100 searchbar" placeholder="">
+                    <!-- <p class="text mb-0 ">Press # to select a variable cell</p> -->
+                </div>
+
+                <!-- <div class="">
+                            <button class="w-100 mt-2 megic-btn">Let the magic begin ✨</button>
+                        </div> -->
+                <!-- <div class="">
+                        <button id="ScrapBtn" class="w-100 mt-2 megic-btn">Search ✨</button>
+                    </div> -->
+                <button class="megic-btn mt-3" id="VerifyBtn">
+                    <span>Verify ✨</span>
                     <div class="progress-bar"></div>
                 </button>
 
@@ -2151,6 +2237,7 @@
             document.getElementById('compaign-screen').style.display = 'none';
             document.getElementById('smartlead-screen').style.display = 'none';
             document.getElementById('email-screen').style.display = 'none';
+            document.getElementById('work-email-screen').style.display = 'none';
         }
         // Function to show the details page and hide the home screen
         function showGooglePage() {
@@ -2163,6 +2250,7 @@
             document.getElementById('compaign-screen').style.display = 'none';
             document.getElementById('smartlead-screen').style.display = 'none';
             document.getElementById('email-screen').style.display = 'none';
+            document.getElementById('work-email-screen').style.display = 'none';
         }
 
         // Function to show the details page and hide the home screen
@@ -2176,6 +2264,7 @@
             document.getElementById('compaign-screen').style.display = 'none';
             document.getElementById('smartlead-screen').style.display = 'none';
             document.getElementById('email-screen').style.display = 'none';
+            document.getElementById('work-email-screen').style.display = 'none';
         }
         // Function to show the details page and hide the home screen
         function showCompaignPage() {
@@ -2188,6 +2277,7 @@
             document.getElementById('compaign-screen').style.display = 'block';
             document.getElementById('smartlead-screen').style.display = 'none';
             document.getElementById('email-screen').style.display = 'none';
+            document.getElementById('work-email-screen').style.display = 'none';
         }
 
         // Function to show the details page and hide the home screen
@@ -2201,6 +2291,7 @@
             document.getElementById('compaign-screen').style.display = 'none';
             document.getElementById('smartlead-screen').style.display = 'block';
             document.getElementById('email-screen').style.display = 'none';
+            document.getElementById('work-email-screen').style.display = 'none';
         }
 
 
@@ -2215,6 +2306,21 @@
             document.getElementById('compaign-screen').style.display = 'none';
             document.getElementById('smartlead-screen').style.display = 'none';
             document.getElementById('email-screen').style.display = 'block';
+            document.getElementById('work-email-screen').style.display = 'none';
+        }
+
+           // Function to show the details page and hide the home screen
+           function showWorkEmailPage() {
+            document.getElementById('home-screen').style.display = 'none'; // Hide home screen
+            document.getElementById('ai-screen').style.display = 'none';
+            document.getElementById('scrapper-screen').style.display = 'none'; // Show details page
+            document.querySelector('.go-back').style.display = 'block'; // Show go back button
+            document.querySelector('.logo').style.display = 'none';
+            document.getElementById('google-screen').style.display = 'none';
+            document.getElementById('compaign-screen').style.display = 'none';
+            document.getElementById('smartlead-screen').style.display = 'none';
+            document.getElementById('email-screen').style.display = 'none';
+            document.getElementById('work-email-screen').style.display = 'block';
         }
 
         // Function to go back to the home screen
@@ -2372,6 +2478,32 @@
             setTimeout(() => {
                 btn.classList.remove("submitting");
                 btn.classList.add("completed");
+                btn.querySelector("span").textContent = "Added 👍🏻";
+            }, 2100);
+        });
+
+
+
+    </script>
+     <script>
+        document.getElementById("VerifyBtn").addEventListener("click", function () {
+            const btn = this;
+            const progressBar = btn.querySelector(".progress-bar");
+
+
+            // Show progress and disable button
+            btn.classList.add("submitting");
+            btn.querySelector("span").textContent = "Verifying...";
+
+            // Animate the progress bar
+            setTimeout(() => {
+                progressBar.style.width = "100%";
+            }, 100);
+
+            // After 2 seconds, mark as completed
+            setTimeout(() => {
+                btn.classList.remove("submitting");
+                btn.classList.add("Verified");
                 btn.querySelector("span").textContent = "Added 👍🏻";
             }, 2100);
         });
