--- a/about.html
+++ b/about.html
@@ -405,6 +405,7 @@
                 </div>
             </div>
         </section>
+       
         <section class="py-lg-5 py-4" id="comparison">
             <div class="container">
                 <div class="row">
@@ -578,7 +579,12 @@
                                         <a href=""><img src="assets/images/partners/zapier-removebg-preview.png" alt=""
                                                 class="partner-img"></a>
                                     </div>
-
+                                    <div class="item shadow-sm">
+                                        <a href=""
+                                        ><img src="assets/images/partners/salesforce.png" alt=""
+                                                class="partner-img">
+                                            </a>
+                                    </div>
                                 </div>
                             </div>
                         </section>
