--- a/index.html
+++ b/index.html
@@ -677,6 +677,12 @@
                                         <a href=""><img src="assets/images/partners/zapier-removebg-preview.png" alt=""
                                                 class="partner-img"></a>
                                     </div>
+                                    <div class="item shadow-sm">
+                                        <a href=""
+                                        ><img src="assets/images/partners/salesforce.png" alt=""
+                                                class="partner-img">
+                                            </a>
+                                    </div>
 
                                 </div>
                             </div>
@@ -703,12 +709,14 @@
                         <div class="tab">
                             <button class="tablinks" onclick="openCity(event, 'real-estate')" id="defaultOpen">Real
                                 Estate</button>
+                                <button class="tablinks" onclick="openCity(event, 'home-service')">Home Services and
+                                    Contracting</button>
+                                    <button class="tablinks" onclick="openCity(event, 'fianance-accounting')">Finance and
+                                        Accounting</button>
                             <button class="tablinks" onclick="openCity(event, 'property-management')">Property
                                 Management</button>
-                            <button class="tablinks" onclick="openCity(event, 'home-service')">Home Services and
-                                Contracting</button>
-                            <button class="tablinks" onclick="openCity(event, 'fianance-accounting')">Finance and
-                                Accounting</button>
+                          
+                          
                         </div>
 
 
