--- a/mergeasy.html
+++ b/mergeasy.html
@@ -684,7 +684,12 @@
                                         <a href=""><img src="assets/images/partners/zapier-removebg-preview.png" alt=""
                                                 class="partner-img"></a>
                                     </div>
-
+                                    <div class="item shadow-sm">
+                                        <a href=""
+                                        ><img src="assets/images/partners/salesforce.png" alt=""
+                                                class="partner-img">
+                                            </a>
+                                    </div>
                                 </div>
                             </div>
                         </section>
