--- a/about.html
+++ b/about.html
@@ -534,7 +534,7 @@
                 </div>
             </div>
         </section> -->
-        <section class="py-lg-5 py-4">
+        <section class="py-lg-5 ">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-7 col-lg-7  hero-text mx-auto text-center">
@@ -550,11 +550,11 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 ">
+        <section class=" ">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 mt-lg-0 mt-3 mx-auto">
-                            <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" alt="Choose deliery" class=" img-fluid">
+                            <img src="assets/images/About us page-pana.png" alt="Choose deliery" class=" img-fluid">
                     </div>
                     <div class="col-lg-5  hero-text  ms-auto">
                         <span class="title"> Versatile Cloud
@@ -571,7 +571,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 ">
+        <section class="py-lg-5  ">
             <div class="container">
                 <div class="row align-items-center">
                    
@@ -587,8 +587,8 @@
                        
                     </div>
 
-                    <div class="col-lg-6 mt-lg-0 mt-3 ms-auto">
-                            <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" alt="Choose deliery" class=" img-fluid">
+                    <div class="col-lg-6 mt-lg-0 mt-3 mx-auto">
+                            <img src="assets/images/About us page-amico.png" alt="Choose deliery" class=" img-fluid">
                     </div>
                 </div>
             </div>
