--- a/plan&pricing.html
+++ b/plan&pricing.html
@@ -547,7 +547,7 @@
                                         <a href=""><img src="assets/images/partners/zapier-removebg-preview.png" alt=""
                                                 class="partner-img"></a>
                                     </div>
-                                    <div class="item shadow-sm">
+                                    <div class="item shadow-sm my-4">
                                         <a href=""
                                         ><img src="assets/images/partners/salesforce.png" alt=""
                                                 class="partner-img">
