--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -974,7 +974,7 @@
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-start">
                                     <div class="feature-icon-div">
-                                        <img src="https://mergeasy123.netlify.app/sidebar/apify.jpg" alt="chatgpt"
+                                        <img src="https://mergeasy123.netlify.app/sidebar/apify.png" alt="chatgpt"
                                             class="feature-icon">
                                     </div>
                                     <div>
@@ -2888,7 +2888,7 @@
                         <div class="d-flex align-items-center">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/apify.jpg" alt="chatgpt"
+                                    <img src="https://mergeasy123.netlify.app/sidebar/apify.png" alt="chatgpt"
                                         class="feature-icon2">
                                 </div>
                                 <div class>
