--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -889,7 +889,7 @@
                             <a class="text-decoration-none">
                                 <div class="d-flex align-items-start">
                                     <div class="feature-icon-div">
-                                        <img src="https://mergeasy123.netlify.app/sidebar/work-email.jpg" alt="chatgpt"
+                                        <img src="https://mergeasy123.netlify.app/sidebar/work-email.png" alt="chatgpt"
                                             class="feature-icon">
                                     </div>
                                     <div>
@@ -1315,7 +1315,7 @@
                 </div>
                 <div class="d-flex align-items-center ">
                     <div class="upgrade-text ">
-                        <a href class>Free Credits</a>
+                        <a href class>Free Credits </a>
                     </div>
                     <div class="upgrade-icon2">
                         &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
@@ -2252,7 +2252,7 @@
                         <div class="d-flex align-items-center">
                             <div class="d-flex align-items-start">
                                 <div class="feature-icon-div">
-                                    <img src="https://mergeasy123.netlify.app/sidebar/work-email.jpg" alt="chatgpt"
+                                    <img src="https://mergeasy123.netlify.app/sidebar/work-email.png" alt="chatgpt"
                                         class="feature-icon2">
                                 </div>
                                 <div class>
