--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -1318,7 +1318,7 @@
                         <a href class>Free Credits </a>
                     </div>
                     <div class="upgrade-icon2">
-                        &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                        &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                     </div>
                 </div>
 
@@ -1559,7 +1559,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -1667,7 +1667,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -1751,7 +1751,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -1951,7 +1951,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -2151,7 +2151,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -2232,7 +2232,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -2348,7 +2348,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -2609,7 +2609,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -2867,7 +2867,7 @@
                             <a href class>Free Credits</a>
                         </div>
                         <div class="upgrade-icon2">
-                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                            &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                         </div>
                     </div>
 
@@ -2986,7 +2986,7 @@
                                 <a href class>Free Credits</a>
                             </div>
                             <div class="upgrade-icon2">
-                                &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.jpg" alt>
+                                &nbsp;&nbsp;<img src="https://mergeasy123.netlify.app/sidebar/prize.png" alt>
                             </div>
                         </div>
 
